Plane Track Issue since 2.74 #44110

Closed
opened 2015-03-24 08:36:03 +01:00 by Benoit ROUSSELLE · 6 comments

System Information
Debian8 (platform: b'Linux:64bit')
GPU: Intel HD 4000.

Blender Version
Broken: version 2.74 (sub 0), branch b'master', commit date b'2015-03-17' b'15:11', hash b'1f547c1', b'Release'
Worked: version 2.73 (sub 6), branch b'master', commit date b'2015-02-06' b'02:55', hash b'4cbf2ebd', b'Release'

Short description of error
track 4 points, in solve panel create a plane track.
The plane movement does not follow tracks.

Exact steps for others to reproduce the error
The archive provided contains the blend file + 20 images used for the tracking.
Tracking is done with 4 points.
Play the animation and see the plane track going crazy.

Thanks for the great job :D
Benoit.planeTrackIssue.zip

**System Information** Debian8 (platform: b'Linux:64bit') GPU: Intel HD 4000. **Blender Version** Broken: version 2.74 (sub 0), branch b'master', commit date b'2015-03-17' b'15:11', hash b'1f547c1', b'Release' Worked: version 2.73 (sub 6), branch b'master', commit date b'2015-02-06' b'02:55', hash b'4cbf2ebd', b'Release' **Short description of error** track 4 points, in solve panel create a plane track. The plane movement does not follow tracks. **Exact steps for others to reproduce the error** The archive provided contains the blend file + 20 images used for the tracking. Tracking is done with 4 points. Play the animation and see the plane track going crazy. Thanks for the great job :D Benoit.[planeTrackIssue.zip](https://archive.blender.org/developer/F154645/planeTrackIssue.zip)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @BenoitROUSSELLE

Added subscriber: @BenoitROUSSELLE
Sergey Sharybin self-assigned this 2015-03-24 08:40:52 +01:00

This issue was referenced by 0f0e080a26

This issue was referenced by 0f0e080a267c5c4fc7bd18566be28dd01ffb9499

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0f0e080a26.

Closed by commit 0f0e080a26.

This issue was referenced by 6289d5b8d1

This issue was referenced by 6289d5b8d1c8ee6810a296cbe57e146ac5073b78
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44110
No description provided.